--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,9 @@
-@import url(./constants.css);
+@import url(../utils/constants/constants.css);
+
 *{
   margin: 0px;
   padding: 0px;
+  box-sizing: border-box;
 }
 body{
   display: flex;
