--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,5 +1,9 @@
 .header{
-
+  width: 100%;
+  padding: 0px 200px;
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
 }
 .headerLogo{
 
